@@ -1,1 +1,0 @@
-Python bindings for Fast Artificial Neural Network Library.
