@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.7 2014/01/23 18:40:09 wiz Exp $
-
-SHA1 (FANN-2.2.0-Source.zip) = 6f95232c018af7f62fb4c7e39d160771a867d6e7
-RMD160 (FANN-2.2.0-Source.zip) = 7689aaacecfc6eacebfe7d999b4973092b5d9bbd
-Size (FANN-2.2.0-Source.zip) = 2285087 bytes
